reject project endpoint and read notification endpoint
