# showcase_app/docs/swagger.json
@@ -80,7 +80,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Get Project",
+                        "description": "Project ID",
                         "name": "projectID",
                         "in": "path",
                         "required": true
@@ -91,6 +91,58 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Project"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/project/reject": {
+            "delete": {
+                "description": "Decline project submission",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Project"
+                ],
+                "summary": "Reject project submission",
+                "parameters": [
+                    {
+                        "description": "Reject Project",
+                        "name": "project",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RejectProject"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
                         }
                     },
                     "400": {
@@ -275,7 +327,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Get User Profile",
+                        "description": "User ID",
                         "name": "userID",
                         "in": "path",
                         "required": true
@@ -377,7 +429,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Get User Notification",
+                        "description": "User ID",
                         "name": "userID",
                         "in": "path",
                         "required": true
@@ -388,6 +440,56 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Notification"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/user/notification/read/:notificationID": {
+            "delete": {
+                "description": "Read a notification and delete it from database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "Read notification",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Notification ID",
+                        "name": "notificationID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError"
                         }
                     },
                     "400": {
@@ -662,9 +764,6 @@
                 "projectVideo": {
                     "type": "string"
                 },
-                "status": {
-                    "type": "string"
-                },
                 "userID": {
                     "type": "integer"
                 },
@@ -698,6 +797,17 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "model.RejectProject": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "projectID": {
+                    "type": "integer"
                 }
             }
         },
